[gd_scene load_steps=26 format=3 uid="uid://bsahf1xgtokhx"]

[ext_resource type="Script" path="res://scripts/new_menu_logic.gd" id="1_avby3"]
[ext_resource type="Texture2D" uid="uid://bkgalev4qp432" path="res://images/background/Background2.png" id="2_5x6j7"]
[ext_resource type="Texture2D" uid="uid://4j261pegys8y" path="res://animations/lava1-Sheet.png" id="4_mvdfx"]
[ext_resource type="Script" path="res://scripts/LavaMenu.gd" id="5_d75xt"]
[ext_resource type="AudioStream" uid="uid://dhu1nte7caaql" path="res://sounds/lava_loop.mp3" id="6_dhccn"]
[ext_resource type="FontFile" uid="uid://c4gr23ju40k7" path="res://fonts/TitanOne-Regular.ttf" id="6_s8nca"]
[ext_resource type="Texture2D" uid="uid://dkea0cefo41b6" path="res://images/platforms/Platform192x320.png" id="7_82vis"]
[ext_resource type="Script" path="res://scenes/Units.gd" id="7_wr3cy"]
[ext_resource type="Texture2D" uid="uid://5osjs3yegjyl" path="res://images/platforms/Platform320x192.png" id="8_vubau"]
[ext_resource type="Texture2D" uid="uid://cbmr0rt6mh3s8" path="res://images/platforms/Platform128x256.png" id="9_st2rb"]
[ext_resource type="Texture2D" uid="uid://f784edg2eg0q" path="res://images/platforms/Platform192x384.png" id="10_e6wbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ms7at"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_l03mv"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_vevj1"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv2mq"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_33uh4"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66iy"]
atlas = ExtResource("4_mvdfx")
region = Rect2(0, 5400, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_f3b6r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms7at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l03mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vevj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv2mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33uh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66iy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sii0c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpalw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qncu"]
size = Vector2(193, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxios"]
size = Vector2(320, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmi3s"]
size = Vector2(128, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhifh"]
size = Vector2(128, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptxp5"]
size = Vector2(192, 384)

[node name="New_Menu" type="Node2D"]
script = ExtResource("1_avby3")

[node name="Backgrounds" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="Backgrounds"]
position = Vector2(960, 540)
texture = ExtResource("2_5x6j7")
metadata/_edit_lock_ = true

[node name="Fireball_Holder" type="Node2D" parent="Backgrounds"]

[node name="Lava" type="AnimatedSprite2D" parent="Backgrounds"]
position = Vector2(962, 1506)
sprite_frames = SubResource("SpriteFrames_f3b6r")
frame = 2
frame_progress = 0.806007
script = ExtResource("5_d75xt")

[node name="Fireball_Timer" type="Timer" parent="Backgrounds/Lava"]
wait_time = 0.5
autostart = true

[node name="Lava_Loop_Sounds" type="AudioStreamPlayer2D" parent="Backgrounds/Lava"]
stream = ExtResource("6_dhccn")
volume_db = -10.0
autoplay = true
bus = &"SFX"

[node name="Canvas" type="CanvasGroup" parent="."]
z_index = 1

[node name="Setting_info" type="Node2D" parent="Canvas"]

[node name="Volume" type="VBoxContainer" parent="Canvas/Setting_info"]
layout_direction = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1698.0
offset_top = 464.0
offset_right = -1272.0
offset_bottom = 634.0
grow_horizontal = 0
grow_vertical = 2

[node name="Master" type="HBoxContainer" parent="Canvas/Setting_info/Volume"]
layout_mode = 2

[node name="Master_slider" type="HSlider" parent="Canvas/Setting_info/Volume/Master"]
custom_minimum_size = Vector2(300, 38.56)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 3

[node name="master_label" type="Label" parent="Canvas/Setting_info/Volume/Master"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 30
text = "Master "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space3" type="MarginContainer" parent="Canvas/Setting_info/Volume"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Music" type="HBoxContainer" parent="Canvas/Setting_info/Volume"]
layout_mode = 2

[node name="music_Slider" type="HSlider" parent="Canvas/Setting_info/Volume/Music"]
custom_minimum_size = Vector2(300, 38.56)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 3

[node name="music_label" type="Label" parent="Canvas/Setting_info/Volume/Music"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 30
text = "Music "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space2" type="MarginContainer" parent="Canvas/Setting_info/Volume"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SFX" type="HBoxContainer" parent="Canvas/Setting_info/Volume"]
layout_mode = 2

[node name="Sound_Slider" type="HSlider" parent="Canvas/Setting_info/Volume/SFX"]
custom_minimum_size = Vector2(300, 38.56)
layout_mode = 2
max_value = 1.0
step = 0.01
tick_count = 3

[node name="sound_label" type="Label" parent="Canvas/Setting_info/Volume/SFX"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 30
text = "SFX "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Units" type="VBoxContainer" parent="Canvas/Setting_info"]
offset_left = 118.0
offset_top = 398.0
offset_right = 250.0
offset_bottom = 482.0
script = ExtResource("7_wr3cy")

[node name="Units" type="Label" parent="Canvas/Setting_info/Units"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.886275, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 40
text = "Units"
horizontal_alignment = 1

[node name="Meter_Using" type="CheckBox" parent="Canvas/Setting_info/Units"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_hover_color = Color(0.761903, 0.736047, 0.955366, 1)
theme_override_colors/font_hover_pressed_color = Color(0.761903, 0.736047, 0.955366, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_constants/check_v_offset = 1
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_sii0c")
text = "Meters"

[node name="Feet_Using" type="CheckBox" parent="Canvas/Setting_info/Units"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_hover_color = Color(0.761903, 0.736047, 0.955366, 1)
theme_override_colors/font_hover_pressed_color = Color(0.761903, 0.736047, 0.955366, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 0.52549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 6
theme_override_constants/check_v_offset = 1
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpalw")
text = "Feet"

[node name="HTP_Info" type="Node2D" parent="Canvas"]
visible = false

[node name="Info" type="RichTextLabel" parent="Canvas/HTP_Info"]
offset_left = 90.0
offset_top = 148.0
offset_right = 618.0
offset_bottom = 411.0
theme_override_colors/default_color = Color(0.972549, 0.976471, 0.639216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/normal_font = ExtResource("6_s8nca")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Hello There!"

[node name="Credit_Info" type="Node2D" parent="Canvas"]
visible = false
position = Vector2(960, 540)

[node name="Dev Team" type="RichTextLabel" parent="Canvas/Credit_Info"]
offset_left = -921.0
offset_top = -481.0
offset_right = -393.0
offset_bottom = -218.0
theme_override_colors/default_color = Color(0.972549, 0.976471, 0.639216, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/normal_font = ExtResource("6_s8nca")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Development Team:
- [color=A2E0FF]Michael Seavers[/color]
- [color=A2FFAF]Noah Sternberg[/color]
- [color=D5A2FF]Ahyoung Jeong[/color]"

[node name="Title" type="Label" parent="Canvas"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1920.0
offset_bottom = 331.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.690196, 0.721569, 0.964706, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 11
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 18
theme_override_constants/line_spacing = -15
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 150
text = "Orpheus’s
Ascent
"
horizontal_alignment = 1

[node name="Credits" type="Sprite2D" parent="Canvas"]
position = Vector2(1508, 756)
rotation = 1.5708
texture = ExtResource("7_82vis")

[node name="Credit_Label" type="Label" parent="Canvas/Credits"]
offset_left = -40.0
offset_top = 165.0
offset_right = 293.0
offset_bottom = 243.0
rotation = -1.5708
theme_override_colors/font_color = Color(0.705882, 0.886275, 1, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/Credits"]
position = Vector2(1, -3.61999e-06)
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Credits/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5qncu")

[node name="How_To_Play" type="Sprite2D" parent="Canvas"]
position = Vector2(412, 756)
texture = ExtResource("8_vubau")

[node name="HTP_Label" type="Label" parent="Canvas/How_To_Play"]
offset_left = -160.0
offset_top = -96.0
offset_right = 159.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.705882, 0.886275, 1, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "How to 
Play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/How_To_Play"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/How_To_Play/Area2D"]
shape = SubResource("RectangleShape2D_wxios")

[node name="Exit_Button" type="Sprite2D" parent="Canvas"]
position = Vector2(1250, 462)
rotation = 1.5708
texture = ExtResource("9_st2rb")

[node name="Exit_Label" type="Label" parent="Canvas/Exit_Button"]
offset_left = -40.0
offset_top = 165.0
offset_right = 293.0
offset_bottom = 243.0
rotation = -1.5708
theme_override_colors/font_color = Color(1, 0.301961, 0.235294, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/Exit_Button"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Exit_Button/Area2D"]
shape = SubResource("RectangleShape2D_rmi3s")

[node name="Back_Button" type="Sprite2D" parent="Canvas"]
visible = false
position = Vector2(960, 540)
rotation = 1.5708
texture = ExtResource("9_st2rb")

[node name="Back_Label" type="Label" parent="Canvas/Back_Button"]
offset_left = -40.0
offset_top = 165.0
offset_right = 293.0
offset_bottom = 243.0
rotation = -1.5708
theme_override_colors/font_color = Color(0.705882, 0.886275, 1, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/Back_Button"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Back_Button/Area2D"]
shape = SubResource("RectangleShape2D_rmi3s")

[node name="Start_Button" type="Sprite2D" parent="Canvas"]
position = Vector2(674, 462)
rotation = 1.5708
texture = ExtResource("9_st2rb")

[node name="Start_Label" type="Label" parent="Canvas/Start_Button"]
offset_left = -40.0
offset_top = 165.0
offset_right = 293.0
offset_bottom = 243.0
rotation = -1.5708
theme_override_colors/font_color = Color(1, 1, 0.52549, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/Start_Button"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Start_Button/Area2D"]
shape = SubResource("RectangleShape2D_rhifh")

[node name="Settings_Button" type="Sprite2D" parent="Canvas"]
position = Vector2(960, 756)
rotation = 1.5708
texture = ExtResource("10_e6wbb")

[node name="Setting_label" type="Label" parent="Canvas/Settings_Button"]
offset_left = -40.0
offset_top = 165.0
offset_right = 293.0
offset_bottom = 243.0
rotation = -1.5708
theme_override_colors/font_color = Color(0.705882, 0.886275, 1, 1)
theme_override_fonts/font = ExtResource("6_s8nca")
theme_override_font_sizes/font_size = 59
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="Canvas/Settings_Button"]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Settings_Button/Area2D"]
shape = SubResource("RectangleShape2D_ptxp5")

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="Backgrounds/Lava/Fireball_Timer" to="Backgrounds/Lava" method="_on_fireball_timer_timeout"]
[connection signal="value_changed" from="Canvas/Setting_info/Volume/Master/Master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Canvas/Setting_info/Volume/Music/music_Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Canvas/Setting_info/Volume/SFX/Sound_Slider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="Canvas/Setting_info/Units/Meter_Using" to="Canvas/Setting_info/Units" method="_on_meter_using_pressed"]
[connection signal="pressed" from="Canvas/Setting_info/Units/Feet_Using" to="Canvas/Setting_info/Units" method="_on_feet_using_pressed"]
[connection signal="mouse_entered" from="Canvas/Credits/Area2D" to="." method="_on_mouse_entered_Credits"]
[connection signal="mouse_exited" from="Canvas/Credits/Area2D" to="." method="_on_mouse_exit_Credits"]
[connection signal="mouse_entered" from="Canvas/How_To_Play/Area2D" to="." method="_on_mouse_entered_HTP"]
[connection signal="mouse_exited" from="Canvas/How_To_Play/Area2D" to="." method="_on_mouse_exit_HTP"]
[connection signal="mouse_entered" from="Canvas/Exit_Button/Area2D" to="." method="_on_mouse_entered_Exit"]
[connection signal="mouse_exited" from="Canvas/Exit_Button/Area2D" to="." method="_on_mouse_exit_Exit"]
[connection signal="mouse_entered" from="Canvas/Back_Button/Area2D" to="." method="_on_mouse_entered_Back"]
[connection signal="mouse_exited" from="Canvas/Back_Button/Area2D" to="." method="_on_mouse_exit_Back"]
[connection signal="mouse_entered" from="Canvas/Start_Button/Area2D" to="." method="_on_mouse_enter_Start"]
[connection signal="mouse_exited" from="Canvas/Start_Button/Area2D" to="." method="_on_mouse_exit_Start"]
[connection signal="mouse_entered" from="Canvas/Settings_Button/Area2D" to="." method="_on_mouse_entered_settings"]
[connection signal="mouse_exited" from="Canvas/Settings_Button/Area2D" to="." method="_on_mouse_exit_Settings"]
